--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsnd --cls --rs --ignore-watch=node_modules src/server.ts",
-    "typeorm":"typeorm-ts-node-commojs",
+    "typeorm": "typeorm-ts-node-commonjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
